erDiagram
    user {
        int id "自增id"
        varchar uid "用户id"
        varchar nickname "昵称"
        bigint(1) sex "性别（0,1）"
        varchar sid "学校"
        int(11) phone "手机号"
        longtext avatar "头像URL"
    }

    order {
        int id "自增id"
        varchar oid "订单号"
        varchar xdr "下单人（NotNull）"
        timestamp create_time "下单时间"
        varchar order_type "订单类型"
        varchar address "地址"
        varchar remark "备注"
        varchar amount "金额"
        varchar jdr "接单人"
        timestamp complete_time "完成时间"
        varchar status "状态"
    }

    address {
        int id "自增id"
        varchar aid "地址id"
        varchar uid "所属用户"
        varchar sjr "收件人"
        varchar phone "手机号"
        varchar detail "地址详细信息"
        boolean default "是否默认地址"
    }

    school {
        int id "自增id"
        varchar sid "学校id"
        varchar sname "学校名"
    }

    dict {
        int id "自增id"
        varchar type "值类型"
        varchar value "字典值"
    }

    user ||--o{ order : "uid"
    user ||--o{ address : "uid"
    user }|--|| school : "sid"
    order }|--|| address : "aid"